Make content width limited for better readability. Fixes #188

--- a/themes/wporg-support/style-rtl.css
+++ b/themes/wporg-support/style-rtl.css
@@ -3161,10 +3161,12 @@ body, #pagebody {
 /*--------------------------------------------------------------
 # .page
 --------------------------------------------------------------*/
+.single .entry-header,
 .page .entry-header {
 	margin-top: 2rem;
 }
 
+.single .entry-header .entry-title,
 .page .entry-header .entry-title {
 	font-size: 1.5625rem;
 	font-weight: 400;
@@ -3173,16 +3175,21 @@ body, #pagebody {
 }
 
 @media screen and (min-width: 48em) {
+	.single .entry-header .entry-title,
 	.page .entry-header .entry-title {
 		padding: 0 2rem;
+		margin: 0;
+		width: 65%;
 	}
 }
 
+.single .entry-content h2,
 .page .entry-content h2 {
 	font-size: 1.5625rem;
 	font-weight: 400;
 }
 
+.single .entry-content h3,
 .page .entry-content h3 {
 	font-size: 1rem;
 	font-weight: 600;
@@ -3190,37 +3197,47 @@ body, #pagebody {
 	text-transform: uppercase;
 }
 
+.single .entry-content a,
 .page .entry-content a {
 	text-decoration: underline;
 }
 
+.single .entry-content section,
 .page .entry-content section {
 	padding: 2rem 0;
 }
 
+.single .entry-content section .container,
 .page .entry-content section .container {
 	margin: 0 auto;
 	max-width: 35.527136788rem;
 }
 
 @media screen and (min-width: 48em) {
+	.single .entry-content section .container,
 	.page .entry-content section .container {
 		padding: 0 2rem;
+		margin: 0;
+		width: 65%;
 	}
 }
 
+.single .entry-content section:first-of-type,
 .page .entry-content section:first-of-type {
 	padding-top: 0;
 }
 
+.single .entry-content section + section,
 .page .entry-content section + section {
 	border-top: 2px solid #eee;
 }
 
+.single .submenu,
 .page .submenu {
 	margin-right: 0;
 }
 
+.single .submenu li,
 .page .submenu li {
 	border-bottom: 1px solid #dedede;
 	font-size: 12px;
@@ -3228,24 +3245,30 @@ body, #pagebody {
 	padding: 5px 0;
 }
 
+.single .submenu li.current,
 .page .submenu li.current {
 	font-weight: bold;
 }
 
+.single .submenu li:last-child,
 .page .submenu li:last-child {
 	border-bottom: 0;
 }
 
+.single .submenu li ul,
 .page .submenu li ul {
 	margin-right: 16px;
 }
 
+.single .submenu li ul li,
 .page .submenu li ul li {
 	border: none;
 	line-height: 1.4em;
 	padding-bottom: 2px;
 }
 
+.single .entry-header .entry-title,
+.single .entry-content section .container,
 .page-template-page-full-width .entry-header .entry-title,
 .page-template-page-full-width .entry-content section .container {
 	max-width: 100%;
